@@ -18,7 +18,6 @@ package org.ballerinalang.diagramutil;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.UUID;
 
@@ -27,8 +26,8 @@ import java.util.UUID;
  */
 public final class TestUtil {
 
-    public static final Path RES_DIR = Paths.get("src/test/resources/").toAbsolutePath();
-    public static final Path BUILD_DIR = Paths.get("build/").toAbsolutePath();
+    public static final Path RES_DIR = Path.of("src/test/resources/").toAbsolutePath();
+    public static final Path BUILD_DIR = Path.of("build/").toAbsolutePath();
 
     private TestUtil() {
     }
