@@ -40,7 +40,6 @@ import java.io.UnsupportedEncodingException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -93,7 +92,7 @@ final class FormatUtil {
                     }
 
                     ballerinaFilePath = argList.get(0);
-                    Path filePath = Paths.get(ballerinaFilePath);
+                    Path filePath = Path.of(ballerinaFilePath);
 
                     SingleFileProject project;
                     try {
@@ -118,7 +117,7 @@ final class FormatUtil {
                     } else {
                         outStream.println(Messages.getNoChanges());
                     }
-                } else if (Paths.get(argList.get(0)).toFile().isFile()) {
+                } else if (Path.of(argList.get(0)).toFile().isFile()) {
                     // If file is a regular file but not a ballerina source file
                     // throw the following exception.
                     throw LauncherUtils.createLauncherException(Messages.getNotABallerinaFile());
@@ -305,9 +304,9 @@ final class FormatUtil {
     private static void formatAndWrite(Path documentPath, Path sourceRootPath,
                                        List<String> formattedFiles, FormattingOptions options, boolean dryRun)
             throws IOException, FormatterException {
-        String fileName = Paths.get(sourceRootPath.toString()).resolve("modules").resolve(documentPath).toString();
+        String fileName = Path.of(sourceRootPath.toString()).resolve("modules").resolve(documentPath).toString();
 
-        String originalSource = Files.readString(Paths.get(fileName));
+        String originalSource = Files.readString(Path.of(fileName));
         // Format and get the formatted source.
         String formattedSource = Formatter.format(originalSource, options);
 
