@@ -21,7 +21,6 @@ import org.testng.annotations.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -43,7 +42,7 @@ public class ParserTestFormatter extends FormatterTest {
 //    // Uncomment to run a subset of test cases.
 //    @Override
 //    public Object[][] testSubset() {
-//        Path buildDirectory = Paths.get("build").toAbsolutePath().normalize();
+//        Path buildDirectory = Path.of("build").toAbsolutePath().normalize();
 //
 //        return new Object[][] {
 //                {"annot_decl_source_01.bal", getFilePath("annot_decl_source_01.bal",
@@ -204,11 +203,11 @@ public class ParserTestFormatter extends FormatterTest {
 
     @Override
     public String getTestResourceDir() {
-        return Paths.get("parser-tests").toString();
+        return Path.of("parser-tests").toString();
     }
 
     private Optional<String> getFilePath(String fileName, String directoryPath) {
-        try (Stream<Path> paths = Files.walk(Paths.get(directoryPath))) {
+        try (Stream<Path> paths = Files.walk(Path.of(directoryPath))) {
             return Optional.ofNullable(paths.filter(f -> f.getFileName().toString().equals(fileName))
                     .toList().get(0).toString());
         } catch (IOException e) {
